--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         
         # Build Windows and OSX
         - name: Build Windows Player
-          run: /opt/unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -noUpm -logFile -projectPath . -buildAndroidPlayer ./bin-win64/CISample.exe
+          run: /opt/unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -noUpm -logFile -projectPath . -buildWindows64Player ./bin-win64/CISample.exe
 
         - name: Archive Windows Build
           uses: actions/upload-artifact@v1
