--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     container: unityci/editor:ubuntu-2020.3.32f1-android-1.0.1
     steps:
+        - name: Setup .NET Core SDK
+          uses: actions/setup-dotnet@v2.1.0
         - name: Checkout Project
           uses: actions/checkout@v1
 
