--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   build:
     runs-on: windows-latest
-    container: unityci/editor:ubuntu-2020.3.32f1-android-1.0.1
+    container: unityci/editor:windows-2020.3.32f1-windows-il2cpp-1.0.1
     steps:
         - name: Setup .NET Core SDK
           uses: actions/setup-dotnet@v2.1.0
