--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@
 on: [push]
 jobs:
   build:
-    runs-on: windows/amd64
-    container: unityci/editor:windows-2020.3.32f1-windows-il2cpp-1.0.1
+    runs-on: windows-latest
+    container: unityci/editor:windows-2020.3.32f1-base-1.0
     steps:
         - name: Setup .NET Core SDK
           uses: actions/setup-dotnet@v2.1.0
