--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,11 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: unityci/editor:windows-2020.3.32f1-base-1.0
+    container: unityci/editor:ubuntu-2020.3.32f1-android-1.0.1
     steps:
-        - name: Setup .NET Core SDK
-          uses: actions/setup-dotnet@v2.1.0
+        - name: Unity - Test runner
+          uses: game-ci/unity-test-runner@v2.0.2
+          
         - name: Checkout Project
           uses: actions/checkout@v1
 
