--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,14 @@ jobs:
     runs-on: ubuntu-latest
     container: unityci/editor:2020.3.32f1-base-1
     steps:
+        - uses: game-ci/unity-test-runner@v2
+          env:
+            UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+            UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+            UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+          with:
+             projectPath: path/to/your/project
+             githubToken: ${{ secrets.GITHUB_TOKEN }}
         - name: Checkout Project
           uses: actions/checkout@v1
 
