--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
             UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
             UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
           with:
-             projectPath: ../../
+             projectPath: Project
              githubToken: ${{ secrets.GITHUB_TOKEN }}
         - name: Checkout Project
           uses: actions/checkout@v1
