--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,19 @@ on: [push]
 jobs:
     build:
         runs-on: ubuntu-latest
+        container: unityci/editor:2020.3.32f1-base-1
         strategy:
             fail-fast: false
 
         steps:
+            # Activate unity
+            - name: Activate Unity
+              run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -logFile -manualLicenseFile .github/Unity_c2020.c.ulf || exit 0
+            - name: license
+              run: /opt/unity/Editor/Unity -quit -batchmode -nographics -logFile -serial ${{ secrets.UNITY_LICENSE_KEY }} -username '${{ secrets.UNITY_USERNAME }}' -password '${{ secrets.UNITY_PASSWORD }}'
+              
+        
+        
             - uses: actions/checkout@v1
               with:
                   fetch-depth: 0
@@ -21,11 +30,6 @@ jobs:
                   key: Library-${{ matrix.targetPlatform }}
                   restore-keys: Library-
             - uses: game-ci/unity-builder@v1
-            # Activate unity
-            - name: Activate Unity
-              run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -logFile -manualLicenseFile .github/Unity_c2020.c.ulf || exit 0
-            - name: license
-              run: /opt/unity/Editor/Unity -quit -batchmode -nographics -logFile -serial ${{ secrets.UNITY_LICENSE_KEY }} -username '${{ secrets.UNITY_USERNAME }}' -password '${{ secrets.UNITY_PASSWORD }}'
               env:
                 UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
                 UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
