--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,39 +3,33 @@
 on: [push]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        container: unityci/editor:2020.3.32f1-base-1
-        strategy:
-            fail-fast: false
-
-        steps:
-            # Activate unity
-            - name: Activate Unity
-              run: /opt/Unity/Editor/Unity -quit -batchmode -nographics -silent-crashes -logFile -manualLicenseFile .github/Unity_c2020.c.ulf || exit 0
-            - name: license
-              run: /opt/unity/Editor/Unity -quit -batchmode -nographics -logFile -serial ${{ secrets.UNITY_LICENSE_KEY }} -username '${{ secrets.UNITY_USERNAME }}' -password '${{ secrets.UNITY_PASSWORD }}'
-              
-        
-        
-            - uses: actions/checkout@v1
-              with:
-                  fetch-depth: 0
-                  lfs: true
-
-        
-            - uses: actions/cache@v1
-              with:
-                  path: Library
-                  key: Library-${{ matrix.targetPlatform }}
-                  restore-keys: Library-
-            - uses: game-ci/unity-builder@v2
-              env:
-                UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-                UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-                UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
-              with:
-                  targetPlatform: ${{ matrix.targetPlatform }}
-            - uses: actions/upload-artifact@v1
-              with:
-                  name: Build-Android
+  buildForAllSupportedPlatforms:
+    name: Build for ${{ matrix.targetPlatform }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        targetPlatform:
+          - iOS # Build an iOS player.
+          - Android # Build an Android .apk standalone app.
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          lfs: true
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-${{ matrix.targetPlatform }}
+          restore-keys: Library-
+      - uses: game-ci/unity-builder@v2
+        env:
+            UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+            UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+            UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+        with:
+          targetPlatform: ${{ matrix.targetPlatform }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Build-${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}
