--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
           restore-keys: Library-
       - uses: game-ci/unity-builder@v2
         env:
-            UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+            UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
             UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-            UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+            UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
