--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,9 +2,9 @@ name: Android CI
 on: [push]
 
 jobs:
-  Sauce Labs App Automate:
-    runs-on: ubuntu-latest
+  Sauce_Labs_App_Automate:
     name: A job to say hello
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
