--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,21 +1,13 @@
-name: Android CI
-on: [push]
-
 jobs:
-  Sauce_Labs_App_Automate:
-    name: A job to say hello
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Hello world action step
-        uses: moatazeldebsy/sauce-labs-app-automate-action@V1.0.1
-        id: sauceLabsTest
-        with:
-          apk_path: 'app/build/outputs/apk/debug/app-debug.apk'
-          test_apk_path: 'app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk'
-          device_name: 'Google Pixel GoogleAPI Emulator,platformVersion=7.0'
-          data_center: 'eu-central-1'
-        env:
-          SAUCELABS_ACCESS_KEY: ${{ secrets.SAUCELABS_ACCESS_KEY }}
-          SAUCELABS_USERNAME: ${{ secrets.SAUCELABS_USERNAME }}
+    test:
+        runs-on: ubuntu-latest
+        name: Action Test
+        steps:
+            # ...
+            - uses: saucelabs/sauce-connect-action@v2
+              with:
+                  username: ${{ secrets.SAUCE_USERNAME }}
+                  accessKey: ${{ secrets.SAUCE_ACCESS_KEY }}
+                  tunnelIdentifier: 63a91446041749ea91724e4fc675871c
+                  configFile: ${{ github.workspace }}/sc-configuration/config.yaml
+            # ...
