--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,7 @@ env:
   SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
 
 jobs:
+  runs-on: ubuntu-latest
   steps:
   - name: Checkout
     uses: actions/checkout@v2
