--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,6 @@
 name: saucectl cypress tests
 
-on:
-  pull_request:
-  push:
-    branches:
-      - main
+on: [push]
 
 env:
   SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
