--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,3 +84,14 @@ jobs:
       - name: Return license
         uses: game-ci/unity-return-license@v2
         if: always()
+
+env:
+  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
+  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
+
+jobs:
+  Testrun:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
