--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,6 @@ jobs:
       fail-fast: false
       matrix:
         targetPlatform:
-          #- iOS # Build an iOS player.
           - Android # Build an Android .apk standalone app.
     steps:
       - uses: actions/checkout@v2
@@ -96,7 +95,6 @@ jobs:
           testing-environment: ""
           concurrency: 10
 
-      - name: Cypress with Cucumber
-        run: |
-          cd examples/cucumber
+      - name: Upload_Sauce
+        run:
           saucectl run
