--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,7 +91,7 @@ jobs:
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
       - name: Upload apk
-        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location 
-             --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             --form 'payload=@"build/${{ matrix.targetPlatform }}.apk"' 
-             --form 'name="${{ matrix.targetPlatform }}.apk"'
+        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
+             'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
+             -F 'payload=@/build/${{ matrix.targetPlatform }}.apk' 
+             -F 'name=${{ matrix.targetPlatform }}.apk'
