--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,7 +91,7 @@ jobs:
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
       - name: Upload apk
-        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
+        run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
              'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
              -F 'payload=@/build/${{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
