--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,9 +90,12 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: Upload apk
+      - name: ChangeDir
         run: cd /build 
-             curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
+
+
+      - name: Upload apk
+        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
              'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
              -F 'payload=@{{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
