--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -97,5 +97,5 @@ jobs:
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}"  
              'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=@${{ matrix.targetPlatform }}.apk' 
+             -F 'payload=${{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
