--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,9 +93,11 @@ jobs:
       - name: ChangeDir
         run: cd build 
 
+      - name: ZipAPK
+        run: zip –u Android.zip Android.apk
 
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=${{ matrix.targetPlatform }}.apk' 
-             -F 'name=${{ matrix.targetPlatform }}.apk'
+             -F 'payload=${{ matrix.targetPlatform }}.zip' 
+             -F 'name=${{ matrix.targetPlatform }}.zip'
