--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,13 +90,8 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: ChangeDir
-        run: cd build 
-
-      - name: List
-        run: ls -a
       - name: ZipAPK
-        run: zip Android.zip Android.apk
+        run: zip Android.zip /build/Android.apk
 
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
