--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,11 +90,8 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: ZipAPK
-        run: zip Android.zip build/Android.apk
-
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=${{ matrix.targetPlatform }}.zip' 
-             -F 'name=${{ matrix.targetPlatform }}.zip'
+             -F 'payload=build/${{ matrix.targetPlatform }}.apk' 
+             -F 'name=${{ matrix.targetPlatform }}.apk'
