--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,5 +93,5 @@ jobs:
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=build/${{ matrix.targetPlatform }}.apk' 
+             -F 'payload=/build/${{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
