--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,8 +90,11 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
+      - name: ZipAPK
+        run: ls /build/Android.apk
+
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=/build/${{ matrix.targetPlatform }}.apk' 
-             -F 'name=${{ matrix.targetPlatform }}.apk'
+             -F 'payload=${{ matrix.targetPlatform }}.zip' 
+             -F 'name=${{ matrix.targetPlatform }}.zip'
