--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Build-${{ matrix.targetPlatform }}
-          path: build/${{ matrix.targetPlatform }}
+          path: build/${{ matrix.targetPlatform }}.apk
       # Return License
       - name: Return license
         uses: game-ci/unity-return-license@v2
@@ -96,5 +96,5 @@ jobs:
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=${{ matrix.targetPlatform }}.zip' 
-             -F 'name=${{ matrix.targetPlatform }}.zip'
+             -F 'payload=build/${{ matrix.targetPlatform }}.apk' 
+             -F 'name=${{ matrix.targetPlatform }}.apk'
