--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,8 +93,11 @@ jobs:
       - name: ZipAPK
         run: mv Android.apk build/Android
 
+      - name: List
+        run: ls 
+
       - name: Upload apk
         run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=build/${{ matrix.targetPlatform }}.apk' 
+             -F 'payload=${{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
