--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,13 +91,13 @@ jobs:
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
       - name: ZipAPK
-        run: mv build/Android Android.apk
+        run: sudo mv build/Android Android.apk
 
       - name: List
         run: ls 
 
       - name: Upload apk
-        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
+        run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
              -F 'payload=${{ matrix.targetPlatform }}.apk' 
              -F 'name=${{ matrix.targetPlatform }}.apk'
