--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,8 +96,11 @@ jobs:
       - name: List
         run: ls 
 
+      - name: ZipIt
+        run: zip Android.zip Android.apk
+
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=${{ matrix.targetPlatform }}.apk' 
-             -F 'name=${{ matrix.targetPlatform }}.apk'
+             -F 'payload=${{ matrix.targetPlatform }}.zip' 
+             -F 'name=${{ matrix.targetPlatform }}.zip'
