--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,13 +94,13 @@ jobs:
         run: sudo mv build/Android Android.apk
 
       - name: List
-        run: ls 
+        run: ls -l
 
       - name: ZipIt
-        run: zip Android.apk Android.zip
+        run: zip Android.zip Android.apk
 
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
              -F 'payload=${{ matrix.targetPlatform }}.zip' 
-             -F 'name=${{ matrix.targetPlatform }}.zip'
+             -F 'name=${{ matrix.targetPlatform }}.apk'
