--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -99,5 +99,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload' 
-             -F 'payload=${{ matrix.targetPlatform }}.apk' 
+             -F 'payload=${{ matrix.targetPlatform }}.zip' 
              -F 'name=${{ matrix.targetPlatform }}.zip'
