--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -95,3 +95,9 @@ jobs:
 
       - name: ZipIt
         run: zip Android.zip Android.apk
+
+      - name: Upload apk
+        run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
+             --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/files/{file_id}' 
+             -F 'payload=${{ matrix.targetPlatform }}.zip' 
+             -F 'name=${{ matrix.targetPlatform }}.zip'
