--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,7 +90,7 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: ZipAPK
+      - name: Rename Android => Android.apk
         run: sudo mv build/Android Android.apk
 
       - name: ZipIt
@@ -98,6 +98,6 @@ jobs:
 
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
-             --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/files/{file_id}' 
-             -F 'payload=${{ matrix.targetPlatform }}.zip' 
-             -F 'name=${{ matrix.targetPlatform }}.zip'
+             --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
+             -F 'payload=@"${{ matrix.targetPlatform }}.apk"' 
+             -F 'name="CC Devops App"'
