--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,6 +54,7 @@ jobs:
         if: always()
 
   buildForAllSupportedPlatforms:
+    needs: [testAllModes]
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
     strategy:
