--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
           artifactsPath: ${{ matrix.testMode }}-artifacts
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           checkName: ${{ matrix.testMode }} Test Results
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         if: always()
         with:
           name: Test results for ${{ matrix.testMode }}
@@ -97,10 +97,6 @@ jobs:
       - name: Rename Android => Android.apk
         run: sudo mv build/Android Android.apk
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: Build-Android
-
       - name: List
         run: ls -l
  
@@ -110,5 +106,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             -F 'payload=@"${{ matrix.targetPlatform }}.apk"' 
+             -F 'payload=@"/${{ matrix.targetPlatform }}.apk"' 
              -F 'name="CC Devops App"'
