--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -95,7 +95,7 @@ jobs:
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
       - name: Rename Android => Android.apk
-        run: sudo mv build/Android Android.apk
+        run: sudo mv build/Android build/Android.apk
 
       - name: List
         run: ls -l
@@ -106,5 +106,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             -F 'payload=@"/${{ matrix.targetPlatform }}.apk"' 
+             -F 'payload=@"build/${{ matrix.targetPlatform }}.apk"' 
              -F 'name="CC Devops App"'
