--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -108,3 +108,11 @@ jobs:
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
              -F 'payload=@"build/${{ matrix.targetPlatform }}.apk"' 
              -F 'name="CC Devops App"'
+
+  Test:
+    needs: [buildForAllSupportedPlatforms]
+    name: Build for ${{ matrix.targetPlatform }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: List
+        run: ls build
