--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -106,13 +106,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             -F 'payload=@"build/${{ matrix.targetPlatform }}.apk"' 
-             -F 'name="CC Devops App"'
-
-  Test:
-    needs: [buildForAllSupportedPlatforms]
-    name: Build for ${{ matrix.targetPlatform }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: List
-        run: ls build
+             --form 'payload="build/${{ matrix.targetPlatform }}.apk"' 
+             --form 'name="CC Devops App"'
