--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,11 +76,13 @@ jobs:
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
       - uses: game-ci/unity-builder@v2
+        id: App
         env:
             UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
             UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
             UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
         with:
+          androidAppBundle: true
           allowDirtyBuild: true
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
@@ -94,7 +96,7 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: Rename Android => Android.apk
+      - name: Rename Android => Android.aab
         run: sudo mv build/Android build/Android.apk
 
       - name: List
@@ -106,5 +108,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             --form 'payload="build/${{ matrix.targetPlatform }}.apk"' 
+             --form 'payload=@"build/${{ matrix.targetPlatform }}.aab"' 
              --form 'name="CC Devops App"'
