--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -108,5 +108,5 @@ jobs:
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             --form 'payload=@"build/${{ matrix.targetPlatform }}.aab"' 
+             --form 'payload= ${{ steps.App }} 
              --form 'name="CC Devops App"'
