--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,4 +104,4 @@ jobs:
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
              --form 'payload=@"build/${{ matrix.targetPlatform }}/Android.apk"' 
-             --form 'name="CC Devops App"'
+             --form 'name="Android.apk"'
